// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders properly 1`] = `
<TransparentPaper>
  <ForwardRef(Tooltip)
    title="Shuffle hand"
  >
    <ForwardRef(Button)
      disabled={true}
      onClick={[Function]}
      size="small"
      sx={
        {
          "width": "100%",
        }
      }
    >
      <Memo(ForwardRef(ShuffleIcon))
        color="action"
        fontSize="small"
      />
    </ForwardRef(Button)>
  </ForwardRef(Tooltip)>
  <ForwardRef(Divider) />
  <ForwardRef(Box)
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="497px"
    p={1}
    sx={null}
  />
</TransparentPaper>
`;

exports[`<Hand /> renders properly with player 1`] = `
<TransparentPaper>
  <ForwardRef(Tooltip)
    title="Shuffle hand"
  >
    <ForwardRef(Button)
      disabled={false}
      onClick={[Function]}
      size="small"
      sx={
        {
          "width": "100%",
        }
      }
    >
      <Memo(ForwardRef(ShuffleIcon))
        color="action"
        fontSize="small"
      />
    </ForwardRef(Button)>
  </ForwardRef(Tooltip)>
  <ForwardRef(Divider) />
  <ForwardRef(Box)
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="-3px"
    p={1}
    sx={null}
  >
    <Tile
      boardLocation={null}
      key="A1"
      tile={
        {
          "id": "A1",
          "letter": "A",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="B1"
      tile={
        {
          "id": "B1",
          "letter": "B",
        }
      }
    />
    <Tile
      boardLocation={null}
      key="C1"
      tile={
        {
          "id": "C1",
          "letter": "C",
        }
      }
    />
  </ForwardRef(Box)>
</TransparentPaper>
`;
